Grafikart 11: Type Challenge easy

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@type-challenges/utils": "^0.1.1"
   }
 }
